<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transfer"
        android:enabled="false"
        android:title="@string/title_move_money" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_accounts"
    android:title="@string/title_accounts" />

</menu>
