...
            app:fabCustomSize="48dp"
            app:srcCompat="@drawable/ic_up_arrow" />

    </LinearLayout>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/fabContainer"
        app:layout_constraintHorizontal_bias="1.0"
...
